added a bit more to the about section of my index page... not really much to say there

--- a/docs/stylesheets/gallery.css
+++ b/docs/stylesheets/gallery.css
@@ -21,7 +21,7 @@
     font-family: sans-serif;
 }
 img {
-    font-family: sans-serif;
+    font-family: "Lucida Console", "Courier New", monospace;
 }
 
 @media (max-aspect-ratio : 1/1) {
